zokrates_cli/examples/compile_errors/generics/unused_struct_generic.zok
struct A<N> {}

def main() {
    return;
}
